--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,6 +21,9 @@ kramdown:
   input: GFM # Use GitHub Flavored Markdown
   syntax_highlighter: rouge
 
+plugins:
+  - jekyll-remote-theme
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
