docs: Add jekyll-seo-tag plugin

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,6 +23,7 @@ kramdown:
 
 plugins:
   - jekyll-remote-theme
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
