--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ baseurl: "/ShopifyMCPMockShop" # the subpath of your site, e.g. /blog. If hosted
 url: "https://ramakay.github.io" # the base hostname & protocol for your site
 
 # Theme
-remote_theme: just-the-docs/just-the-docs
+theme: just-the-docs
 
 # Theme settings (optional, examples)
 # color_scheme: dark
