--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,46 +1,10 @@
 # Basic Jekyll configuration for GitHub Pages
-# See: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-content-to-your-github-pages-site-using-jekyll
 
 # Site settings
 title: Shopify MCP Mock Server
-description: >- # this means to ignore newlines until "baseurl:"
-  An open-source MCP server for Shopify, supporting mock.shop for safe development and testing.
-baseurl: "/ShopifyMCPMockShop" # the subpath of your site, e.g. /blog. If hosted at root, leave empty.
-url: "https://ramakay.github.io" # the base hostname & protocol for your site
+description: An open-source MCP server for Shopify, supporting mock.shop for safe development and testing.
+baseurl: "/ShopifyMCPMockShop" # the subpath of your site
+url: "https://ramakay.github.io" # the base hostname & protocol
 
 # Theme
 theme: just-the-docs
-
-# Theme settings (optional, examples)
-# color_scheme: dark
-# search_enabled: true
-
-# Build settings
-markdown: kramdown
-kramdown:
-  input: GFM # Use GitHub Flavored Markdown
-  syntax_highlighter: rouge
-
-plugins:
-  - jekyll-remote-theme
-  - jekyll-seo-tag
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
