docs: Switch theme to jekyll-theme-minimal for testing

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
 gem "jekyll", "~> 3.9" # Or a specific version compatible with GitHub Pages
-gem "just-the-docs"
+gem "jekyll-theme-minimal"
 
 # Optional: GitHub Pages often uses these, good to include
 gem "wdm", "~> 0.1.1", :install_if => Gem.win_platform?
