--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,10 +7,4 @@ baseurl: "/ShopifyMCPMockShop" # the subpath of your site
 url: "https://ramakay.github.io" # the base hostname & protocol
 
 # Theme
-theme: jekyll-theme-minimal
-
-# Plugins
-plugins:
-  - jekyll-remote-theme
-  - jekyll-seo-tag
-  - jekyll-github-metadata
+theme: just-the-docs
