--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ dist/
 # Local Docs (Not for public repo)
 localdocs/
 
+# Jekyll
+docs/vendor/
+docs/.bundle/
+docs/_site/
+
 # Optional: Add logs, coverage, etc. if needed
 # logs
 # *.log
