fix: Update Jekyll workflow to use working-directory for Ruby setup
- Enable bundler-cache to use built-in caching
- Specify working-directory for ruby/setup-ruby action
- Add working-directory to build step
- Remove manual bundle install step since bundler-cache handles it

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,20 +33,15 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
-          bundler-cache: false
-          
-      - name: Install dependencies
-        run: |
-          cd docs
-          bundle install
+          bundler-cache: true
+          working-directory: ./docs
           
       - name: Setup Pages
         uses: actions/configure-pages@v5
         
       - name: Build Jekyll site
-        run: |
-          cd docs
-          bundle exec jekyll build --destination ../_site --baseurl "/ShopifyMockMCP"
+        working-directory: ./docs
+        run: bundle exec jekyll build --destination ../_site --baseurl "/ShopifyMockMCP"
         env:
           JEKYLL_ENV: production
           
